--- a/style.css
+++ b/style.css
@@ -11,7 +11,14 @@ h1 {
 }
 #tekst1{
   color:rgb(248, 37, 0);
+  font-family: 'Comic Sans MS';
 }
 body {
-        background-color: rgb(82, 58, 187) ;
+        background-color: rgb(77, 255, 0) ;
       }
+      
+
+
+#linki {
+  font-family:'Comic Sans MS', cursive;
+}
