--- a/gry/gry.css
+++ b/gry/gry.css
@@ -14,3 +14,8 @@ body {
   #tabela2023 {
     font-family:'Comic Sans MS', cursive;
   }
+
+  #tabela2024 {
+    font-family:'Comic Sans MS', cursive;
+     
+  }
