--- a/css/style_main.css
+++ b/css/style_main.css
@@ -1,5 +1,5 @@
 #naglowek {
-background-image: url("assets/zeta-min.webp");	background-color: cyan;
+background-image: url("../assets/zeta-min.webp");	background-color: cyan;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
