--- a/game-jam/css/style.css
+++ b/game-jam/css/style.css
@@ -5,6 +5,10 @@ body {
 	align-items: center;
 	background: #f0f0f0;
 }
+.link-main{
+	text-decoration: none;
+	color: white;
+}
 
 #win-message {
 	position: fixed;
